# rust-wasm-test

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  text.txt
src/: canvas.rs  game.rs  lib.rs  utils.rs
