[package]
name = "spheres"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wgpu = "0.20"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.69", features = [
  "Window",
  "Navigator",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Document",
  "console"
] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen-futures = "0.4.50"

[dev-dependencies]
wasm-pack = "0.10"
